src/test/resources/purescript_examples/passing/DataAndType.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('A')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeArgs)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('A')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PureASTWrapperElement(TypeConstructor)
            PureASTWrapperElement(Qualified)
              PsiElement(proper name)('B')
              PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeSynonymDeclaration)
        PsiElement(type)('type')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('B')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Type)
          PureASTWrapperElement(TypeAtom)
            PureASTWrapperElement(TypeConstructor)
              PureASTWrapperElement(Qualified)
                PsiElement(proper name)('A')
                PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
